add vehicle fstrategy
