# src/vehicle/model/flow.go
@@ -11,23 +11,53 @@ import (
 type Flow struct {
 	gorm.Model
 
-	FlowId          uint32
-	VehicleId       string
-	Hash            uint32
-	SrcIp           uint32
-	SrcPort         uint32
-	DstIp           uint32
-	DstPort         uint32
-	Protocol        uint8
-	FlowInfo        string
-	SafeType        uint8
-	SafeInfo        string
-	StartTime       uint32
-	LastSeenTime    uint32
-	SrcDstBytes     uint64
-	DstSrcBytes     uint64
-	Stat        uint8
+	FlowId       uint32
+	VehicleId    string
+	Hash         uint32
+	SrcIp        string
+	SrcPort      uint32
+	DstIp        string
+	DstPort      uint32
+	Protocol     uint8
+	FlowInfo     string
+	SafeType     uint8
+	SafeInfo     string
+	StartTime    uint32
+	LastSeenTime uint32
+	SrcDstBytes  uint64
+	DstSrcBytes  uint64
+	Stat         uint8
 }
+
+//序列化为数字类型
+//func (flow *Flow) MarshalJSON() ([]byte, error) {
+//	type FlowType Flow
+//	return json.Marshal(&struct {
+//		SrcIp string
+//		DstIp string
+//		*FlowType
+//	}{
+//		SrcIp:    util.IpIntToString(int(flow.SrcIp)),
+//		DstIp:    util.InetNtoa(int64(flow.DstIp)),
+//		FlowType: (*FlowType)(flow),
+//	})
+//}
+
+//
+//func (flow *Flow) UnmarshalJSON(data []byte) error {
+//	type FlowType Flow
+//	aux := &struct {
+//		StartTime int64
+//		*FlowType
+//	}{
+//		FlowType: (*FlowType)(flow),
+//	}
+//	if err := json.Unmarshal(data, &aux); err != nil {
+//		return err
+//	}
+//	flow.StartTime = time.Unix(aux.StartTime, 0)
+//	return nil
+//}
 
 func (f *Flow) InsertModel() error {
 	return mysql.CreateModel(f)
@@ -52,17 +82,17 @@ func (f *Flow) UpdateModelsByCondition(values interface{}, query interface{}, qu
 	return nil
 }
 func (f *Flow) DeleModelsByCondition(query interface{}, args ...interface{}) error {
-	err := mysql.HardDeleteModelB(f,query,args...)
-	if err!=nil{
-		return fmt.Errorf("%s err %s",util.RunFuncName(),err.Error())
+	err := mysql.HardDeleteModelB(f, query, args...)
+	if err != nil {
+		return fmt.Errorf("%s err %s", util.RunFuncName(), err.Error())
 	}
 	return nil
 }
 
-func (f *Flow) GetModelListByCondition(model interface{}, query interface{}, args ...interface{}) (error) {
-	err := mysql.QueryModelRecordsByWhereCondition(model,query,args...)
-	if err!=nil{
-		return fmt.Errorf("%s err %s",util.RunFuncName(),err.Error())
+func (f *Flow) GetModelListByCondition(model interface{}, query interface{}, args ...interface{}) error {
+	err := mysql.QueryModelRecordsByWhereCondition(model, query, args...)
+	if err != nil {
+		return fmt.Errorf("%s err %s", util.RunFuncName(), err.Error())
 	}
 	return nil
 }
@@ -70,9 +100,15 @@ func (f *Flow) GetModelListByCondition(model interface{}, query interface{}, arg
 func (flow *Flow) CreateModel(flowParam ...interface{}) interface{} {
 	flowItemParams := flowParam[0].(*protobuf.FlowParam_FItem)
 	flow.Hash = flowItemParams.GetHash()
-	flow.SrcIp = flowItemParams.GetSrcIp()
+
+	sipLittleEndian := util.BytesToLittleEndian(util.UintToBytes(flowItemParams.GetSrcIp()))
+	flow.SrcIp = util.IpIntToString(int(sipLittleEndian))
+
 	flow.SrcPort = flowItemParams.GetSrcPort()
-	flow.DstIp = flowItemParams.GetDstIp()
+
+	dipLittleEndian := util.BytesToLittleEndian(util.UintToBytes(flowItemParams.GetDstIp()))
+	flow.DstIp = util.IpIntToString(int(dipLittleEndian))
+
 	flow.DstPort = flowItemParams.GetDstPort()
 	flow.Protocol = uint8(flowItemParams.GetProtocol())
 	flow.FlowInfo = flowItemParams.GetFlowInfo()
@@ -86,49 +122,13 @@ func (flow *Flow) CreateModel(flowParam ...interface{}) interface{} {
 	return flow
 }
 
-
-
-
-
-
 func (flow *Flow) GetModelPaginationByCondition(pageIndex int, pageSize int, totalCount *int,
-	paginModel interface{}, query interface{}, args ...interface{})(error){
+	paginModel interface{}, query interface{}, args ...interface{}) error {
 
-	err := mysql.QueryModelPaginationByWhereCondition(flow,pageIndex,pageSize,totalCount,paginModel,query,args...)
+	err := mysql.QueryModelPaginationByWhereCondition(flow, pageIndex, pageSize, totalCount, paginModel, query, args...)
 
-	if err!=nil{
-		return fmt.Errorf("%s err %s",util.RunFuncName(),err.Error())
+	if err != nil {
+		return fmt.Errorf("%s err %s", util.RunFuncName(), err.Error())
 	}
 	return nil
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
