# src/vehicle/model/flow_strategy.go
@@ -7,14 +7,15 @@ import (
 	"vehicle_system/src/vehicle/emq/protobuf"
 	"vehicle_system/src/vehicle/util"
 )
+
 ///////////////////////////FlowStrategy//////////////////////////////////////
 type Fstrategy struct {
 	gorm.Model
-	FstrategyId    string
+	FstrategyId string
 
-	Type          uint8 //策略模式
-	HandleMode    uint8 //处理方式
-	Enable        bool  //策略启用状态
+	Type       uint8 //策略模式
+	HandleMode uint8 //处理方式
+	Enable     bool  //策略启用状态
 }
 
 func (flowStrategy *Fstrategy) InsertModel() error {
@@ -38,16 +39,16 @@ func (flowStrategy *Fstrategy) UpdateModelsByCondition(values interface{}, query
 	return nil
 }
 func (flowStrategy *Fstrategy) DeleModelsByCondition(query interface{}, args ...interface{}) error {
-	err := mysql.HardDeleteModelB(flowStrategy,query,args...)
-	if err!=nil{
-		return fmt.Errorf("%s err %s",util.RunFuncName(),err.Error())
+	err := mysql.HardDeleteModelB(flowStrategy, query, args...)
+	if err != nil {
+		return fmt.Errorf("%s err %s", util.RunFuncName(), err.Error())
 	}
 	return nil
 }
-func (flowStrategy *Fstrategy) GetModelListByCondition(model interface{}, query interface{}, args ...interface{}) (error) {
-	err := mysql.QueryModelRecordsByWhereCondition(model,query,args...)
-	if err!=nil{
-		return fmt.Errorf("%s err %s",util.RunFuncName(),err.Error())
+func (flowStrategy *Fstrategy) GetModelListByCondition(model interface{}, query interface{}, args ...interface{}) error {
+	err := mysql.QueryModelRecordsByWhereCondition(model, query, args...)
+	if err != nil {
+		return fmt.Errorf("%s err %s", util.RunFuncName(), err.Error())
 	}
 	return nil
 }
@@ -61,12 +62,12 @@ func (flowStrategy *Fstrategy) CreateModel(flowStrategyParams ...interface{}) in
 	return flowStrategy
 }
 func (flowStrategy *Fstrategy) GetModelPaginationByCondition(pageIndex int, pageSize int, totalCount *int,
-	paginModel interface{}, query interface{}, args ...interface{})(error){
+	paginModel interface{}, query interface{}, args ...interface{}) error {
 
-	err := mysql.QueryModelPaginationByWhereCondition(flowStrategy,pageIndex,pageSize,totalCount,paginModel,query,args...)
+	err := mysql.QueryModelPaginationByWhereCondition(flowStrategy, pageIndex, pageSize, totalCount, paginModel, query, args...)
 
-	if err!=nil{
-		return fmt.Errorf("%s err %s",util.RunFuncName(),err.Error())
+	if err != nil {
+		return fmt.Errorf("%s err %s", util.RunFuncName(), err.Error())
 	}
 	return nil
 }
@@ -76,8 +77,9 @@ type FstrategyVehicle struct {
 	gorm.Model
 	FstrategyVehicleId string
 	FstrategyId        string
-	VehicleId  		      string
+	VehicleId          string
 }
+
 func (flowStrategyVehicle *FstrategyVehicle) InsertModel() error {
 	return mysql.CreateModel(flowStrategyVehicle)
 }
@@ -99,29 +101,31 @@ func (flowStrategyVehicle *FstrategyVehicle) UpdateModelsByCondition(values inte
 	return nil
 }
 func (flowStrategyVehicle *FstrategyVehicle) DeleModelsByCondition(query interface{}, args ...interface{}) error {
-	err := mysql.HardDeleteModelB(flowStrategyVehicle,query,args...)
-	if err!=nil{
-		return fmt.Errorf("%s err %s",util.RunFuncName(),err.Error())
+	err := mysql.HardDeleteModelB(flowStrategyVehicle, query, args...)
+	if err != nil {
+		return fmt.Errorf("%s err %s", util.RunFuncName(), err.Error())
 	}
 	return nil
 }
-func (flowStrategyVehicle *FstrategyVehicle) GetModelListByCondition(model interface{}, query interface{}, args ...interface{}) (error) {
-	err := mysql.QueryModelRecordsByWhereCondition(model,query,args...)
-	if err!=nil{
-		return fmt.Errorf("%s err %s",util.RunFuncName(),err.Error())
+func (flowStrategyVehicle *FstrategyVehicle) GetModelListByCondition(model interface{}, query interface{}, args ...interface{}) error {
+	err := mysql.QueryModelRecordsByWhereCondition(model, query, args...)
+	if err != nil {
+		return fmt.Errorf("%s err %s", util.RunFuncName(), err.Error())
 	}
 	return nil
 }
 func (flowStrategyVehicle *FstrategyVehicle) CreateModel(strategyParams ...interface{}) interface{} {
 	return flowStrategyVehicle
 }
+
 ///////////////////////////VehicleLearningResult//////////////////////////////////////
 
 type FstrategyVehicleItem struct {
 	gorm.Model
-	FstrategyVehicleId  string
-	FstrategyItemId   string
+	FstrategyVehicleId string
+	FstrategyItemId    string
 }
+
 func (flowStrategyVehicleItem *FstrategyVehicleItem) InsertModel() error {
 	return mysql.CreateModel(flowStrategyVehicleItem)
 }
@@ -143,16 +147,16 @@ func (flowStrategyVehicleItem *FstrategyVehicleItem) UpdateModelsByCondition(val
 	return nil
 }
 func (flowStrategyVehicleItem *FstrategyVehicleItem) DeleModelsByCondition(query interface{}, args ...interface{}) error {
-	err := mysql.HardDeleteModelB(flowStrategyVehicleItem,query,args...)
-	if err!=nil{
-		return fmt.Errorf("%s err %s",util.RunFuncName(),err.Error())
+	err := mysql.HardDeleteModelB(flowStrategyVehicleItem, query, args...)
+	if err != nil {
+		return fmt.Errorf("%s err %s", util.RunFuncName(), err.Error())
 	}
 	return nil
 }
-func (flowStrategyVehicleItem *FstrategyVehicleItem) GetModelListByCondition(model interface{}, query interface{}, args ...interface{}) (error) {
-	err := mysql.QueryModelRecordsByWhereCondition(model,query,args...)
-	if err!=nil{
-		return fmt.Errorf("%s err %s",util.RunFuncName(),err.Error())
+func (flowStrategyVehicleItem *FstrategyVehicleItem) GetModelListByCondition(model interface{}, query interface{}, args ...interface{}) error {
+	err := mysql.QueryModelRecordsByWhereCondition(model, query, args...)
+	if err != nil {
+		return fmt.Errorf("%s err %s", util.RunFuncName(), err.Error())
 	}
 	return nil
 }
@@ -165,15 +169,15 @@ func (flowStrategyVehicleItem *FstrategyVehicleItem) CreateModel(strategyParams 
 type FstrategyItem struct {
 	gorm.Model
 	FstrategyItemId string
-	VehicleId  string
-	DstIp   string
-	DstPort   uint32
+	VehicleId       string
+	DstIp           string
+	DstPort         uint32
 }
 
 func (flowStrategyItem *FstrategyItem) SoftDeleModelImpl(query interface{}, args ...interface{}) error {
-	err := mysql.SoftDeleteModelB(flowStrategyItem,query,args...)
-	if err!=nil{
-		return fmt.Errorf("%s err %s",util.RunFuncName(),err.Error())
+	err := mysql.SoftDeleteModelB(flowStrategyItem, query, args...)
+	if err != nil {
+		return fmt.Errorf("%s err %s", util.RunFuncName(), err.Error())
 	}
 	return nil
 }
@@ -200,10 +204,10 @@ func (flowStrategyItem *FstrategyItem) UpdateModelsByCondition(values interface{
 func (flowStrategyItem *FstrategyItem) DeleModelsByCondition(query interface{}, args ...interface{}) error {
 	return nil
 }
-func (flowStrategyItem *FstrategyItem) GetModelListByCondition(model interface{}, query interface{}, args ...interface{}) (error) {
-	err := mysql.QueryModelRecordsByWhereCondition(model,query,args...)
-	if err!=nil{
-		return fmt.Errorf("%s err %s",util.RunFuncName(),err.Error())
+func (flowStrategyItem *FstrategyItem) GetModelListByCondition(model interface{}, query interface{}, args ...interface{}) error {
+	err := mysql.QueryModelRecordsByWhereCondition(model, query, args...)
+	if err != nil {
+		return fmt.Errorf("%s err %s", util.RunFuncName(), err.Error())
 	}
 	return nil
 }
@@ -211,87 +215,120 @@ func (flowStrategyItem *FstrategyItem) CreateModel(strategyParams ...interface{}
 	return flowStrategyItem
 }
 
-
 /**
 SELECT strategies.*,strategy_vehicles.vehicle_id ,strategy_vehicle_learning_results.learning_result_id FROM strategies
 inner JOIN strategy_vehicles ON strategies.strategy_id = strategy_vehicles.strategy_id
 inner JOIN strategy_vehicle_learning_results ON strategy_vehicles.vehicle_id = strategy_vehicle_learning_results.vehicle_id
- */
+*/
 
 type FlowStrategyVehicleItemJoin struct {
 	gorm.Model
-	FstrategyId    string
+	FstrategyId string
 
-	Type          uint8 //策略模式
-	HandleMode    uint8 //处理方式
-	Enable        bool  //策略启用状态
+	Type       uint8 //策略模式
+	HandleMode uint8 //处理方式
+	Enable     bool  //策略启用状态
 
-	VehicleId 				string
+	VehicleId string
 
-	FstrategyVehicleId  string
-	FstrategyItemId   string
+	FstrategyVehicleId string
+	FstrategyItemId    string
 }
 
-
-func GetFlowStrategyVehicleItems(query string,args ...interface{}) ([]*FlowStrategyVehicleItemJoin,error) {
-	vgorm,err := mysql.GetMysqlInstance().GetMysqlDB()
-	if err!= nil{
-		return nil,fmt.Errorf("%s open grom err:%v",util.RunFuncName(),err.Error())
+func GetFlowStrategyVehicleItems(query string, args ...interface{}) ([]*FlowStrategyVehicleItemJoin, error) {
+	vgorm, err := mysql.GetMysqlInstance().GetMysqlDB()
+	if err != nil {
+		return nil, fmt.Errorf("%s open grom err:%v", util.RunFuncName(), err.Error())
 	}
 	fstrategyVehicleItemJoin := []*FlowStrategyVehicleItemJoin{}
 	err = vgorm.Debug().
 		Table("fstrategies").
 		Select("fstrategies.*,fstrategy_vehicles.vehicle_id ,fstrategy_vehicle_items.fstrategy_item_id,fstrategy_vehicle_items.fstrategy_vehicle_id").
-		Where(query,args...).
+		Where(query, args...).
 		Joins("inner join fstrategy_vehicles ON fstrategies.fstrategy_id = fstrategy_vehicles.fstrategy_id").
-		Joins("inner JOIN fstrategy_vehicle_items ON fstrategy_vehicles.fstrategy_vehicle_id = fstrategy_vehicle_items.fstrategy_vehicle_id")	.
+		Joins("inner JOIN fstrategy_vehicle_items ON fstrategy_vehicles.fstrategy_vehicle_id = fstrategy_vehicle_items.fstrategy_vehicle_id").
 		Scan(&fstrategyVehicleItemJoin).
 		Error
-	return fstrategyVehicleItemJoin,err
+	return fstrategyVehicleItemJoin, err
 }
 
 /**
- 获取某会话策略下的车载
- */
-func GetFStrategyVehicles(query string,args ...interface{}) ([]*FlowStrategyVehicleItemJoin,error) {
-	vgorm,err := mysql.GetMysqlInstance().GetMysqlDB()
-	if err!= nil{
-		return nil,fmt.Errorf("%s open grom err:%v",util.RunFuncName(),err.Error())
+获取某会话策略下的车载
+*/
+func GetFStrategyVehicles(query string, args ...interface{}) ([]*FlowStrategyVehicleItemJoin, error) {
+	vgorm, err := mysql.GetMysqlInstance().GetMysqlDB()
+	if err != nil {
+		return nil, fmt.Errorf("%s open grom err:%v", util.RunFuncName(), err.Error())
 	}
 	fstrategyVehicles := []*FlowStrategyVehicleItemJoin{}
 	err = vgorm.Debug().
 		Table("fstrategies").
 		Select("fstrategies.*,fstrategy_vehicles.vehicle_id").
-		Where(query,args...).
+		Where(query, args...).
 		Joins("inner join fstrategy_vehicles ON fstrategies.fstrategy_id = fstrategy_vehicles.fstrategy_id").
 		Scan(&fstrategyVehicles).
 		Error
-	return fstrategyVehicles,err
+	return fstrategyVehicles, err
 }
 
+/**************
+获取某车载的单条会话
+*/
 
-/**
- 获取某会话策略下的车载
- */
-func GetVehicleFStrategy(query string,args ...interface{}) (*FlowStrategyVehicleItemJoin,error) {
-	vgorm,err := mysql.GetMysqlInstance().GetMysqlDB()
-	if err!= nil{
-		return nil,fmt.Errorf("%s open grom err:%v",util.RunFuncName(),err.Error())
+type VehicleSingleFlowStrategyItemsReult struct {
+	FstrategyId string
+	Type        uint8 //策略模式
+	HandleMode  uint8 //处理方式
+	Enable      bool  //策略启用状态
+	VehicleId   string
+
+	/////////////////////
+	VehicleFStrategyItemsMap map[string][]uint32
+}
+
+func GetVehicleFStrategy(query string, args ...interface{}) (*FlowStrategyVehicleItemJoin, error) {
+	vgorm, err := mysql.GetMysqlInstance().GetMysqlDB()
+	if err != nil {
+		return nil, fmt.Errorf("%s open grom err:%v", util.RunFuncName(), err.Error())
 	}
 	vehiclesFstrategy := &FlowStrategyVehicleItemJoin{}
 	err = vgorm.Debug().
 		Table("fstrategies").
 		Select("fstrategies.*,fstrategy_vehicles.vehicle_id,fstrategy_vehicles.fstrategy_vehicle_id").
-		Where(query,args...).
+		Where(query, args...).
 		Joins("inner join fstrategy_vehicles ON fstrategies.fstrategy_id = fstrategy_vehicles.fstrategy_id").
 		Scan(&vehiclesFstrategy).
 		Error
-	return vehiclesFstrategy,err
+	return vehiclesFstrategy, err
 }
 
-//
-//
-//
+/*********************************************获取会话策略下的ip-ports映射************************************************/
+type VehicleSingleFlowStrategyItems struct {
+	gorm.Model
+
+	FstrategyVehicleId string
+	FstrategyItemId    string
+
+	DstIp   string
+	DstPort uint32
+}
+
+func GetVehicleFStrategyItems(query string, args ...interface{}) ([]*VehicleSingleFlowStrategyItems, error) {
+	vgorm, err := mysql.GetMysqlInstance().GetMysqlDB()
+	if err != nil {
+		return nil, fmt.Errorf("%s open grom err:%v", util.RunFuncName(), err.Error())
+	}
+	vehicleFStrategyItems := []*VehicleSingleFlowStrategyItems{}
+	err = vgorm.Debug().
+		Table("fstrategy_vehicle_items").
+		Select("fstrategy_vehicle_items.*,fstrategy_items.dst_ip,fstrategy_items.dst_port").
+		Where(query, args...).
+		Joins("inner join fstrategy_items ON fstrategy_vehicle_items.fstrategy_item_id = fstrategy_items.fstrategy_item_id").
+		Scan(&vehicleFStrategyItems).
+		Error
+	return vehicleFStrategyItems, err
+}
+
 //func GetVehicleAllFlowStrategys(query string,args ...interface{}) ([]*StrategyVehicleLearningResultJoin,error) {
 //	vgorm,err := mysql.GetMysqlInstance().GetMysqlDB()
 //	if err!= nil{
@@ -308,4 +345,3 @@ func GetVehicleFStrategy(query string,args ...interface{}) (*FlowStrategyVehicle
 //		Error
 //	return strategyVehicleLearningResultJoins,err
 //}
-
