# src/vehicle_script/api_script/flow_api.go
@@ -7,125 +7,117 @@ import (
 )
 
 var urls = map[string]string{
-	"get_flow":"http://localhost:7001/api/v1/flows/6656653",
-	"get_flows":"http://localhost:7001/api/v1/flows",
-	"pagination":"http://localhost:7001/api/v1/pagination/flows",
-	"post_flows":"http://localhost:7001/api/v1/flows",
-	"edit_flows":"http://localhost:7001/api/v1/flows/1111",
-	"dele_flows":"http://localhost:7001/api/v1/flows/113907034",
+	"get_flow":   "http://localhost:7001/api/v1/flows/6656653",
+	"get_flows":  "http://192.168.40.14:7001/api/v1/flows",
+	"pagination": "http://localhost:7001/api/v1/pagination/flows",
+	"post_flows": "http://localhost:7001/api/v1/flows",
+	"edit_flows": "http://localhost:7001/api/v1/flows/1111",
+	"dele_flows": "http://localhost:7001/api/v1/flows/113907034",
 }
 
-
-func main()  {
+func main() {
 	//getFlow()
-	//getFlows()
+	getFlows()
 	//getPaginationFlows()
 	//addFlows()
-	editFlows()
+	//editFlows()
 	//deleFlows()
 }
 
-
-func deleFlows()  {
+func getFlows() {
 	token := tool.GetVehicleToken()
 
-	queryParams:=map[string]interface{}{
-		"vehicle_id":"1234567890123",
+	queryParams := map[string]interface{}{
+		"vehicle_id": "b020eccdf33d48b4aa246a89a6f04609",
 	}
 
-	reqUrl:=urls["dele_flows"]
+	reqUrl := urls["get_flows"]
 
-	resp,_:=tool.Delete(reqUrl,queryParams,token)
+	resp, _ := tool.Get(reqUrl, queryParams, token)
 
-	respMarshal ,_:= json.Marshal(resp)
-	fmt.Printf("resp %+v",string(respMarshal))
+	respMarshal, _ := json.Marshal(resp)
+	fmt.Printf("resp %+v", string(respMarshal))
 }
 
+func deleFlows() {
+	token := tool.GetVehicleToken()
 
-func editFlows()  {
+	queryParams := map[string]interface{}{
+		"vehicle_id": "1234567890123",
+	}
+
+	reqUrl := urls["dele_flows"]
+
+	resp, _ := tool.Delete(reqUrl, queryParams, token)
+
+	respMarshal, _ := json.Marshal(resp)
+	fmt.Printf("resp %+v", string(respMarshal))
+}
+
+func editFlows() {
 	token := tool.GetVehicleToken()
 	urlReq, _ := urls["edit_flows"]
 
 	bodyParams := map[string]interface{}{
-		"vehicle_id":"1234567890123",
-		"src_ip":"3",
-		"dst_ip":"42",
+		"vehicle_id": "1234567890123",
+		"src_ip":     "3",
+		"dst_ip":     "42",
 	}
-	resp,_:=tool.PutForm(urlReq,bodyParams,token)
+	resp, _ := tool.PutForm(urlReq, bodyParams, token)
 
-	respMarshal ,_:= json.Marshal(resp)
-	fmt.Printf("resp %+v",string(respMarshal))
+	respMarshal, _ := json.Marshal(resp)
+	fmt.Printf("resp %+v", string(respMarshal))
 }
 
-
-func addFlows()  {
+func addFlows() {
 	token := tool.GetVehicleToken()
 	urlReq, _ := urls["post_flows"]
 
 	bodyParams := map[string]interface{}{
-		"vehicle_id":"1234567890123",
-		"hash":"1111",
-		"src_ip":"1111",
-		"dst_ip":"111",
+		"vehicle_id": "1234567890123",
+		"hash":       "1111",
+		"src_ip":     "1111",
+		"dst_ip":     "111",
 	}
-	resp,_:=tool.PostForm(urlReq,bodyParams,token)
+	resp, _ := tool.PostForm(urlReq, bodyParams, token)
 
-	respMarshal ,_:= json.Marshal(resp)
-	fmt.Printf("resp %+v",string(respMarshal))
+	respMarshal, _ := json.Marshal(resp)
+	fmt.Printf("resp %+v", string(respMarshal))
 }
 
-
-func getPaginationFlows()  {
+func getPaginationFlows() {
 
 	token := tool.GetVehicleToken()
 
-	queryParams:=map[string]interface{}{
-		"vehicle_id":"1234567890123",
-		"page_size":"10",
-		"page_index":"1",
+	queryParams := map[string]interface{}{
+		"vehicle_id": "1234567890123",
+		"page_size":  "10",
+		"page_index": "1",
 	}
 
-	reqUrl:=urls["pagination"]
+	reqUrl := urls["pagination"]
 
-	resp,_:=tool.Get(reqUrl,queryParams,token)
+	resp, _ := tool.Get(reqUrl, queryParams, token)
 
-
-	respMarshal ,_:= json.Marshal(resp)
-	fmt.Printf("resp %+v",string(respMarshal))
-}
-
-
-func getFlows()  {
-	token := tool.GetVehicleToken()
-
-	queryParams:=map[string]interface{}{
-		"vehicle_id":"1234567890123",
-	}
-
-	reqUrl:=urls["get_flows"]
-
-	resp,_:=tool.Get(reqUrl,queryParams,token)
-
-	respMarshal ,_:= json.Marshal(resp)
-	fmt.Printf("resp %+v",string(respMarshal))
+	respMarshal, _ := json.Marshal(resp)
+	fmt.Printf("resp %+v", string(respMarshal))
 }
 
 /**
 flowId:=c.Param("flow_id")
 	vehicleId:=c.Query("vehicle_id")
- */
-func getFlow()  {
+*/
+func getFlow() {
 	token := tool.GetVehicleToken()
 
-	queryParams:=map[string]interface{}{
-		"vehicle_id":"1234567890123",
+	queryParams := map[string]interface{}{
+		"vehicle_id": "1234567890123",
 	}
 
-	reqUrl:=urls["get_flow"]
+	reqUrl := urls["get_flow"]
 
+	resp, _ := tool.Get(reqUrl, queryParams, token)
 
-	resp,_:=tool.Get(reqUrl,queryParams,token)
-
-	respMarshal ,_:= json.Marshal(resp)
-	fmt.Printf("resp %+v",string(respMarshal))
+	respMarshal, _ := json.Marshal(resp)
+	fmt.Printf("resp %+v", string(respMarshal))
 }
